tests/auto/qml/qqmldelegatemodel/tst_qqmldelegatemodel.cpp
@@ -46,6 +46,7 @@ private slots:
     void valueWithoutCallingObjectFirst();
     void qtbug_86017();
     void filterOnGroup_removeWhenCompleted();
+    void contextAccessedByHandler();
 };
 
 class AbstractItemModel : public QAbstractItemModel
@@ -163,6 +164,15 @@ void tst_QQmlDelegateModel::filterOnGroup_removeWhenCompleted()
     QQmlDelegateModel *model = root->findChild<QQmlDelegateModel*>();
     QVERIFY(model);
     QVERIFY(QTest::qWaitFor([=]{ return model->count() == 2; }));
+}
+
+void tst_QQmlDelegateModel::contextAccessedByHandler()
+{
+    QQmlEngine engine;
+    QQmlComponent component(&engine, testFileUrl("contextAccessedByHandler.qml"));
+    QScopedPointer<QObject> root(component.create());
+    QVERIFY2(root, qPrintable(component.errorString()));
+    QVERIFY(root->property("works").toBool());
 }
 
 QTEST_MAIN(tst_QQmlDelegateModel)
